--- a/style.css
+++ b/style.css
@@ -368,3 +368,26 @@ footer .sociales a {
 .hidden {
   display: none;
 }
+.hidden {
+  display: none;
+}
+
+#mensaje-exito {
+  text-align: center;
+  margin-top: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2rem;
+  color: #333;
+  animation: aparecer 1s ease-in-out;
+}
+
+@keyframes aparecer {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
